--- a/atbirthpage.html
+++ b/atbirthpage.html
@@ -100,7 +100,7 @@ img {
     <p>The next vaccines are to be given at 6 weeks set on <br>alert </p>
     
 
-    <button class="select-image"> <a href="schedulepage.html"> Alert </a></button>
+    <button class="select-image"> <a href="babychecklist.html"> Alert </a></button>
   </form>
 
 </body>
